# libtelegram

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  example_calculator.cbp  example_echo.cbp  example_echo_json.cbp  example_echo_ptree.cbp  example_getphoto.cbp  example_livelocation.cbp  example_upload.cbp  example_webfetch.cbp  libtelegram.cbp  libtelegram.workspace  listprojectobjects.sh  set_webhook.sh  version.h
examples/: CMakeLists.txt  calculator.cpp  echo.cpp  echo_json.cpp  echo_ptree.cpp  getphoto.cpp  livelocation.cpp  upload.cpp  webfetch.cpp
include/boost/: cgi.hpp
include/boost/cgi/: basic_client.hpp  basic_connection.hpp  basic_request.hpp  basic_request_acceptor.hpp  cgi.hpp  config.hpp  error.hpp  fcgi.hpp  scgi.hpp
include/boost/cgi/cgi/: acceptor.hpp  client.hpp  request.hpp  request_service.hpp  service.hpp  traits.hpp
include/boost/cgi/common/: basic_protocol_service.hpp  commit.hpp  connection_base.hpp  cookie.hpp  data_map_proxy.hpp  error.hpp  form_parser.hpp  form_part.hpp  has_hidden_io_service.hpp  header.hpp  io_service_provider.hpp  is_async.hpp  map.hpp  name.hpp  parse_options.hpp  path_info.hpp  protocol_traits.hpp  request_acceptor_service.hpp  request_base.hpp  request_data.hpp  request_service.hpp  request_status.hpp  response.hpp  role_type.hpp  source_enums.hpp  tags.hpp
include/boost/cgi/connections/: anonymous_pipe.hpp  async_stdio.hpp  shareable_tcp_socket.hpp  stdio.hpp  tcp_socket.hpp
include/boost/cgi/detail/: basic_io_object.hpp  basic_sync_io_object.hpp  common_headers.hpp  coroutine.hpp  extract_params.hpp  is_multimap.hpp  pop_options.hpp  push_options.hpp  save_environment.hpp  service_base.hpp  service_id.hpp  throw_error.hpp  url_decode.hpp  url_decode.ipp  yield.hpp
include/boost/cgi/fcgi/: acceptor.hpp  acceptor_service_impl.hpp  client.hpp  error.hpp  fcgi_connection.hpp  request.hpp  request_acceptor_service.hpp  request_fwd.hpp  request_service.hpp  response.hpp  service.hpp  specification.hpp  traits.hpp  transport_selection.hpp  win32_acceptor_service_impl.hpp
include/boost/cgi/fwd/: basic_client_fwd.hpp  basic_connection_fwd.hpp  basic_protocol_service_fwd.hpp  basic_request_acceptor_fwd.hpp  basic_request_fwd.hpp  data_map_proxy_fwd.hpp  form_parser_fwd.hpp  io_service_provider_fwd.hpp  request_service_fwd.hpp  sessions_fwd.hpp
include/boost/cgi/http/: status_code.hpp
include/boost/cgi/impl/: basic_request.ipp  fcgi_request_service.ipp  form_parser.ipp  response.ipp
include/boost/cgi/import/: basic_io_object.hpp  buffer.hpp  io_service.hpp  read.hpp  streambuf.hpp  write.hpp
include/boost/cgi/scgi/: acceptor.hpp  client.hpp  error.hpp  request.hpp  request_acceptor_service.hpp  request_impl.hpp  request_parser.hpp  request_parser.ipp  request_service.hpp  request_service.ipp  service.hpp  traits.hpp
include/boost/cgi/utility/: redirect.hpp  sessions.hpp  (+1 more)
include/libtelegram/: config.h  libtelegram.h  listener.h  sender.h
include/libtelegram/listeners/: base.h  fcgi.h  poll.h
include/libtelegram/types/: audio.h  callback_game.h  callback_query.h  chat.h  chat_member.h  chat_photo.h  contact.h  document.h  file.h  invoice.h  location.h  mask_position.h  message.h  optional.h  order_info.h  photosize.h  shipping_address.h  sticker.h  sticker_set.h  successful_payment.h  types.h  user.h  user_profile_photos.h  venue.h  video.h  video_note.h  voice.h
include/urdl/: read_stream.hpp
include/urdl/detail/: connect.hpp  file_read_stream.hpp  handshake.hpp  http_read_stream.hpp
include/urdl/impl/: istreambuf.ipp
(+11 files in other folders)
